# excel-translator

./: .env.example  .gitignore  README.md  document.xlsx  output.xlsx  output_parallel.xlsx  output_sheetnames.xlsx  pyproject.toml
.codecapsule/: .gitignore  Dockerfile.opencode  profile.json
deploy/: excel-translator.service  nginx.conf
tests/: test_ai.py  test_cli.py  test_web.py  test_workbook.py
web/: __init__.py  app.py
web/static/: app.css  app.js
web/templates/: index.html  job.html
xlsx_ai_translate/: __init__.py  ai.py  cli.py  workbook.py
